crates/aiy/src/unit_tests/snapshots/aiy__upgrade_compatibility__upgrade_compatibility_tests__version_mismatch.snap
---
source: crates/aiy/src/unit_tests/upgrade_compatibility_tests.rs
expression: normalize_path(result.unwrap_err().to_string())
---
error[Compatibility E01008]: file format version downgrade
  ┌─ /fixtures/upgrade_errors/deponly_errors_v2/sources/UpgradeErrors.move:4:18
  │
4 │ module upgrades::upgrades {
  │                  ^^^^^^^^ Downgrading from file format version 1 to 0 is not supported.
  │
  = File format version downgrades are not supported.
  = Please upgrade to the latest version of the move language tooling.


Upgrade failed, this package requires changes to be compatible with the existing package. Its upgrade policy is set to 'additive'.
